--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </style>
 </head>
 <body>
-    <h1> Cheetah is on top  </h1>
+    <h1> Cheetah is on top  by L7N </h1>
     <div class="container">
         <div class="image-box">
             <img src= "https://i.pinimg.com/originals/04/67/ac/0467acd8140a9370d610bb2ac71aa305.gif" alt="Skull Image" width="500">
@@ -57,7 +57,7 @@
             <p><strong>Country:</strong> Loading...</p>
             <p><strong>Timezone:</strong> Loading...</p>
         </div>
-        <a href="https://discord.gg/69q" class="discord-link" target="_blank">discord.gg/69q</a>
+        <a href="https://discord.gg/m-8" class="discord-link" target="_blank">discord.gg/m-8</a>
     </div>
     <audio autoplay loop>
         <source src="https://github.com/ttt402d/toxic44442/raw/refs/heads/main/0131dddddd.mp3" type="audio/mpeg">
