--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </style>
 </head>
 <body>
-    <h1> Cheetah is on top  by L7N </h1>
+    <h1> Cheetah is on top  by L7N & Toxic</h1>
     <div class="container">
         <div class="image-box">
             <img src= "https://i.pinimg.com/originals/04/67/ac/0467acd8140a9370d610bb2ac71aa305.gif" alt="Skull Image" width="500">
