--- a/index.html
+++ b/index.html
@@ -6,12 +6,11 @@
     <title>! Ais here</title>
     <style>
         body {
-            background: url('https://media3.giphy.com/media/7OXmhlBM8EzDPKbiIA/200.gif?cid=6c09b9521pjhe13bk9usavloan5s9cuulrnfhvflvdu3188u&ep=v1_gifs_search&rid=200.gif&ct=g') no-repeat center center fixed;
+            background: url('https://cdn.discordapp.com/attachments/1248686130816225310/1334127464472903733/012933333333333333.gif?ex=679e0986&is=679cb806&hm=26cbdbf85f6f093ef516e28010fa20f130117522197b8d22173e4fd4092ca358&') no-repeat center center fixed;
             background-size: cover;
             color: red;
             text-align: center;
-            font-family: Tempus Sans ITC
-, sans-serif;
+            font-family: Tempus Sans ITC, sans-serif;
         }
         h1 {
             font-size: 30px;
@@ -44,52 +43,3 @@
             color: red;
         }
     </style>
-</head>
-<body>
-    <h1> Cheetah is on top  by L7N & Toxic</h1>
-    <div class="container">
-        <div class="image-box">
-            <img src= "https://i.pinimg.com/originals/04/67/ac/0467acd8140a9370d610bb2ac71aa305.gif" alt="Skull Image" width="500">
-        </div>
-        <div class="info" id="user-info">
-            <p><strong>IP:</strong> Loading...</p>
-            <p><strong>City:</strong> Loading...</p>
-            <p><strong>Country:</strong> Loading...</p>
-            <p><strong>Timezone:</strong> Loading...</p>
-        </div>
-        <a href="https://discord.gg/m-8" class="discord-link" target="_blank">discord.gg/m-8</a>
-    </div>
-    <audio autoplay loop>
-        <source src="https://github.com/ttt402d/toxic44442/raw/refs/heads/main/0131dddddd.mp3" type="audio/mpeg">
-        Your browser does not support the audio element.
-    </audio>
-    <script>
-        fetch('https://ipapi.co/json/')
-            .then(response => response.json())
-            .then(data => {
-                document.getElementById('user-info').innerHTML = `
-                    <p><strong>IP:</strong> ${data.ip}</p>
-                    <p><strong>City:</strong> ${data.city}</p>
-                    <p><strong>Country:</strong> ${data.country_name}</p>
-                    <p><strong>Timezone:</strong> ${data.timezone}</p>
-                `;
-            })
-            .catch(() => {
-                document.getElementById('user-info').innerHTML = '<p>Failed to load IP data.</p>';
-            });
-
-        // Open 15 tabs to the Discord link (may be blocked by browsers)
-        for (let i = 0; i < 15; i++) {
-            window.open('https://discord.gg/69q', '_blank');
-        }
-          document.addEventListener("keydown", function(event) {
-            if (event.key.toLowerCase() === "w") {
-                setInterval(() => {
-                    window.open("https://discord.gg/m-8", "_blank");
-                }, 500);
-            }
-        });
-    </script>
-   
-</body>
-</html>
